# Loyal

./: README.md  gdmf_decode_test.py  ios15_iphone11  pyproject.toml  requirements.txt
app/: __main__.py  routes.py
backend/: beta.py  gdmf.py  itunes.py  loyal.py  request.py  webcrawl.py
docs/: README.md  endpoints.md  model.md
interface/: __init__.py
routes/: __init__.py
routes/v1/: __init__.py
routes/v2/: __init__.py
utils/: cache.py  device.py  model.py  request.py
