[tool.poetry]
name = "loyal"
version = "0.1.0"
description = ""
authors = ["fxrcha <truetype24@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
fastapi-utils = "^0.2.1"
slowapi = "^0.1.4"
xmltodict = "^0.12.0"
aiohttp = "^3.7.4"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
